Bug #48249
mds: dir->mark_new should together with dir->mark_dirty
% Done:
0%
Source:
Development
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Related issues
History
#1 Updated by Zheng Yan 2 months ago
- Related to Bug #47201: mds: CDir::_omap_commit(int): Assertion `committed_version == 0' failed. added
#2 Updated by Patrick Donnelly 2 months ago
- Status changed from New to Fix Under Review
- Assignee set to Zheng Yan
- Target version set to v16.0.0
- Source set to Development
- Backport set to octopus,nautilus
- Pull request ID set to 38109
- Component(FS) MDS added
#3 Updated by Patrick Donnelly 2 months ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Nathan Cutler 2 months ago
- Copied to Backport #48370: octopus: mds: dir->mark_new should together with dir->mark_dirty added
#5 Updated by Nathan Cutler 2 months ago
- Copied to Backport #48371: nautilus: mds: dir->mark_new should together with dir->mark_dirty added