mds: dir->mark_new() should together with dir->mark_dirty()

Otherwise, the 'new' flag won't get cleared after dir is committed.
The leftover 'new' flag will confuse later journal and dir commit.

Fixes: https://tracker.ceph.com/issues/48249
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit be4710a1496c46f3307966ddfa416e932d878603)

Conflicts:
        src/mds/MDCache.cc
- in octopus, CDir::mark_dirty() takes a version_t argument in addition to the
  LogSegment* pointer